﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

------------------------------------------------------------------------------------------------------------------------
1.1.9
------------------------------------------------------------------------------------------------------------------------

2014-05-25: Laurent Declercq
	- RELEASE i-MSCP 1.1.9

DATABASE:
	- Fixed: r187 is not a valid database update method

ENGINE:
	- Fixed: Can't locate object method "validateCertificateChain"

GUI:
	- Fixed: Unable to add self-signed certificate without CA bundle

------------------------------------------------------------------------------------------------------------------------
1.1.8
------------------------------------------------------------------------------------------------------------------------

2014-05-24: Laurent Declercq
	- RELEASE i-MSCP 1.1.8

CONFIGS:
	- Fixed: Wrong placeholder variables in proftpd configuration template file (Ubuntu)

GUI:
	- Fixed: Unable to add SSL certificate without CA bundle (unexpected line feed in ca_bundle field)

------------------------------------------------------------------------------------------------------------------------
1.1.7
------------------------------------------------------------------------------------------------------------------------

2014-05-23: Laurent Declercq
	- RELEASE i-MSCP 1.1.7

Tickets:
	- Fixed: #1090: Bug - Unable to update to 1.1.6 version - Wrong update query

------------------------------------------------------------------------------------------------------------------------
1.1.6
------------------------------------------------------------------------------------------------------------------------

2014-05-23: Laurent Declercq
	- RELEASE i-MSCP 1.1.6