@@ -5,6 +5,9 @@
 Git stable
 ------------------------------------------------------------------------------------------------------------------------
 
+DATABASE:
+	Fixed: Wrong column definition in update r176
+
 ------------------------------------------------------------------------------------------------------------------------
 1.1.9
 ------------------------------------------------------------------------------------------------------------------------
